# quant_research

./: .gitignore  README.md  pyproject.toml
examples/: analyze_candidate_policy_regime.py  analyze_event_state_regime.py  analyze_framework_v1_acceptance.py  analyze_joined_selection_residual_risk.py  analyze_ml_challenger_attribution.py  analyze_regime_factor_leg_payoff.py  analyze_score_selection_displacement.py  analyze_unseen_overlay_attribution.py  build_adaptive_state_conditioned_score_switch.py  build_backtest_adaptive_state_switch.py  build_baseline_a_alpha_dataset.py  build_event_state_exposure_schedule.py  build_factor_failure_atlas.py  build_factor_opportunity_map.py  build_factor_risk_gate.py  build_joined_alpha_dataset.py  build_policy_regime_gate.py  build_primary_pool_score_blends.py  build_regime_factor_shrink_schedule.py  build_state_conditioned_factor_health_schedule.py  build_state_conditioned_factor_sleeve.py  build_state_conditioned_score_switch.py  build_state_switch_validation_report.py  build_timestamp_score_switch.py  build_top_score_loss_factor_gate.py  check_factor_research_memory.py  compare_policy_backtests.py  evaluate_alpha_dataset.py  generate_allocator_monitoring_report.py  real_data_smoke.py  render_kline_quality_check.py  review_candidate_alpha_queue.py  review_score_overlay_promotion.py  run_allocator_daily_monitoring.py  run_allocator_validation.py  run_baseline_a_grid.py  run_baseline_a_real_backtest.py  run_baseline_a_tree_model.py  run_candidate_factor_portfolios.py  run_candidate_policy_validation.py  (+11 more)
quant_research/: __init__.py  (+1 more)
(+180 files in other folders)
