[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research"
version = "0.1.0"
description = "Quant research framework for the quant_trade workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2",
    "pyarrow>=15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
ml = [
    "lightgbm>=4.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["quant_research*"]
